# Visual-Agentic-Memory

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.py  setup.cfg  setup.py  tui.py
vam/: agent.py  cli.py  config.py  jobs.py  models.py  prompts.py  protocol.py  tui.py  video.py
vam/llm/: __init__.py  openrouter.py  router.py
vam/memory/: session_memory.py
vam/retrieval/: agent_search.py  frame_store.py
vam/server/: app.py
vam/server/api/: frames.py
vam/server/ws/: __init__.py  agent_chat.py  connection_manager.py
vam/user/: __init__.py  metadata_store.py
vam/vision/: backends.py  embeddings.py  qwen3_vl.py
