[metadata]
name = visual-agentic-memory
version = 0.1.0
description = A streamlined framework for indexing video memory and performing agentic retrieval.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    fastapi
    uvicorn[standard]
    pydantic
    python-dotenv
    httpx
    pydantic-settings
    python-multipart
    transformers
    torch
    pillow>=10.0.0
    scikit-image>=0.21.0
    opencv-python<4.11
    numpy<2.0; python_version < "3.13"
    numpy>=2.0; python_version >= "3.13"
    rich

[options.packages.find]
include =
    vam
    vam.*

[options.entry_points]
console_scripts =
    vam-tui = vam.cli:run_tui
    vam-server = vam.cli:run_server
